Fixed CSS for Nav covering content

--- a/globus_portal_framework/search/static/css/search/detail-base.css
+++ b/globus_portal_framework/search/static/css/search/detail-base.css
@@ -39,3 +39,7 @@
     margin-top:30px;
 }
 
+body {
+  margin-top: 60px;
+}
+
